@@ -5,10 +5,9 @@
 
 JUMIPLUGINDESC=<p>Este plugin de contenido incluye scripts en los artículos de Joomla!: desde un archivo o desde la base de datos del componente Jumi.</p><p><b>Uso: {jumi [codigo_fuente] [arg1] [arg2] ... [argN]}</b><br />where</p><ul><li><b>codigo_fuente</b><br />es la ruta y nombre del archivo a incluir o<br /> la ID de la tabla donde se guardo el código.<br />La ruta y nombre puede ser relativa a la ruta ofrecida desde los parámetros del plugin. Si no es equivalente al raíz de Joomla!.<br />La id debe ir precedida de un asterisko (e.g. *4).</li><li><b>[arg1] ... [argN]</b><br />son argumentos opcionales. Esto depende del archivo a incluir. Los argumentos son accesibles desde el array $jumi[] en el archivo incluido.</li></ul><p>Ejemplos de inclusion + argumentos:  {jumi [plugin/content/jumi/jumi_demo.php][primero][segundo]}</p><p>Ejemplo de inclusión desde la base de datos a través de la id:  {jumi [*1]}</p><p>Existe un módulo y un plugin Jumi totalmente compatibles.</p><p>Información adicional y recursos: <a href="http://jumi.vedeme.cz">Descargas y guias</a>, <a href="http://edo.webmaster.am/jumi">Trucos</a>.</p>
 PARAMABSPATH=Ruta absoluta opcional de los archivos incluidos. Si se deja en blanco se tomará el raíz de Joomla! por defecto. Sin barra al final.
-PARAMHIDECODE=SI se selecciona Sí, el código Jumi no será mostrado ni procesado.
+PARAMCLEARJUMI=SI se selecciona Sí, el código Jumi no será mostrado ni procesado.
 PARAMNESTED=Si se selecciona sí y el código suministrado incluye la sintaxis jumi[], esta será procesada también.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
 ERROR_CONTENT=Jumi está activo pero <b>no hay nada que mostrar</b>.<br />Especifica el código fuente (primeros corchetes).
 ERROR_FILE=El archivo<br /><b>%s</b><br />no existe o no tiene permisos de lectura!
 ERROR_RECORD=La ID:<b>%d</b> no existe en la base de datos!
-HIDE JUMI CODE=Ocultar código Jumi
-DEFAULT ABSOLUTE JUMI PATH=Ruta absoluta de Jumi por defecto
